--- a/configs/pretrain_base.yaml
+++ b/configs/pretrain_base.yaml
@@ -5,7 +5,7 @@
 # ===== EXPERIMENT =====
 experiment:
   wandb_project: interdiff
-  wandb_run_name: interdiff_bs${training.batch_size}_vocab${tokenizer.vocab_size}_seed${seed}
+  wandb_run_name: pretrain_base_vocab${tokenizer.vocab_size}_seed${seed}
 
 seed: 42
 eval_only: false
